--- a/src/App.scss
+++ b/src/App.scss
@@ -29,3 +29,13 @@
     }
 }
 
+a.nav-link {
+    text-decoration: none;
+    color: white;
+}
+
+a.nav-link:visited { text-decoration: none; color:white }
+a.nav-link:hover { text-decoration: none; color: white }
+a.nav-link:focus { text-decoration: none; color: white }
+a.nav-link:hover, a:active { text-decoration: none; color:white }
+
