--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -12,7 +12,7 @@
 
     &-title {
         font-size: 23px;
-        margin: 30px 50px;
+        margin: 10px 50px;
     }
 
     &-content {
@@ -68,8 +68,26 @@
     display: flex;
     align-items: center;
 
-    .btn{ 
-        height: 30px;
+    .btn { 
+        background-color:rgba(24, 123, 189, 0.856);
+        color: white;
+        font-size: 12px;
+        border-radius: 2px;
+        outline: none;
+        border: none;
+        padding: 8px 17px;
+        text-align: center;
+        cursor: pointer;
+        // width: 120px;
+     
+    }
+
+    .btn:hover {
+        opacity: 0.3;
+    }
+
+    .btn-has{
+        background-color: rgba(29, 216, 191, 0.856)
     }
 
     .hidden {
@@ -77,6 +95,6 @@
     }
 
     .item-added {
-        display: flex;
+      display: flex;
     }
 }
