styled filter, and buttons

--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -78,6 +78,7 @@
         padding: 8px 17px;
         text-align: center;
         cursor: pointer;
+        transition: 0.8s;
         // width: 120px;
      
     }
