--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -1,13 +1,15 @@
 .item-page {
 
     display: flex;
-    font-size: 11px;
+    font-size: 18px;
     margin: 20px;
     line-height: 17px;
     align-items: center;
+    height: 70vh;
+    width: 100vw;
 
     &-img{
-        height: 300px;
+        height: 400px;
     }
 
     &-title {
@@ -17,6 +19,11 @@
 
     &-content {
         padding-top: 20px;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         .box {
             margin: 30px 50px;
@@ -30,7 +37,7 @@
                 
                 padding-right: 16px;
                 width: 15vw;
-                height: 110px;
+                height: 150px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -42,26 +49,29 @@
 
 .label{
     color: grey;
-    font-size: 14px;
-    margin: 5px 0px;
+    font-size: 18px;
+    margin: 12px 0px;
 }
 
 .label-ingredients {
     margin: 0px 50px;
+    position: relative;
+    top: 12px;
 }
 
 .ingredients-container {
     display: flex;
     flex-wrap: wrap;
-    margin: 8px 50px;
+    margin: 20px 50px;
 }
 
 .measurements {
-    margin-right: 30px;
+    margin-right: 60px;
+    line-height: 30px;
 }
 
 .amount {
-    font-size: 10px;
+    font-size: 15px;
 }
 
 .box-title {
@@ -71,11 +81,11 @@
     .btn { 
         background-color:rgba(24, 123, 189, 0.856);
         color: white;
-        font-size: 12px;
+        font-size: 16px;
         border-radius: 2px;
         outline: none;
         border: none;
-        padding: 8px 17px;
+        padding: 12px 17px;
         text-align: center;
         cursor: pointer;
         transition: 0.8s;
