--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -2,13 +2,14 @@
     display: flex;
     width: 100%;
     padding-top: 50px;
-    padding-left: 30px;
+    // padding-left: 30px;
     padding-bottom: 30px;
     line-height: 30px;
     
     .item-image {
         width: 30%;
         object-fit: cover;
+        margin-left: 30px;
     }
 
     .content-container {
